Use own package name to use it via composer.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "oryzone/oauth-user-data",
+    "name": "sporerd/oauth-user-data",
     "description": "Extension library for Lusitanian/PHPoAuthLib to extract user profile data from various oAuth providers",
     "keywords": ["oauth", "authentication", "authorization", "security", "profile", "user"],
     "homepage": "https://github.com/Oryzone/PHPoAuthUserData",
