--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
-        "lusitanian/oauth": "~0.3"
+        "sporerd/lusitanian-oauth": "~0.3"
     },
     "require-dev" : {
         "phpunit/phpunit": "~3.7"
